<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/xiaoyuanshenghuo"
    android:gravity="center_vertical|right"
    android:paddingRight="5dp"
    android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goto_campus_build"
        android:text="@string/campusBuild"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textSize="20sp"
        android:text="@string/campusScenery"
        android:onClick="goto_campus_scenery"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textSize="20sp"
        android:text="@string/freshAssist"
        android:onClick="goto_fresh_assist"/>
</LinearLayout>